# pyEight

./: .coveragerc  .gitignore  MANIFEST  README.md  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lint.txt  setup.cfg  setup.py
.github/workflows/: check.yml  pytest.yml
pyeight/: constants.py  eight.py  user.py
tests/: __init__.py  conftest.py  test_eight.py  test_user.py
tests/fixtures/: device_info.json  empty_user_intervals.json  empty_user_trends.json  logged_in_user_profile.json  login.json  partner_user_profile.json  user_intervals.json  user_trends.json
