[metadata]
description-file = README.md

[options]
python_requires = >= 3.9

[tool:isort]
profile = black

[pylint.MASTER]
ignore = tests

[pylint.MESSAGES CONTROL]
disable = invalid-name,
	too-many-instance-attributes,
	too-many-arguments,
	too-many-branches,
	duplicate-code,
	format

[tool:pytest]
asyncio_mode = auto
log_level = DEBUG

[coverage:run]
omit = */tests/*
